--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,9 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/spring_batch
+spring.datasource.jdbcUrl=jdbc:mysql://localhost:3306/spring_batch
 spring.datasource.username=user
 spring.datasource.password=123456
+
+app.datasource.jdbcUrl=jdbc:mysql://localhost:3306/app
+app.datasource.username=user
+app.datasource.password=123456
+
 spring.batch.jdbc.initialize-schema=always
